# IoT-miniproject-2-device

./: CMakeLists.txt  Kconfig  README.md  prj.conf
src/: codec.h  main.c
src/configuration/thingy91_nrf9160_ns/: led_state_def.h
src/events/: CMakeLists.txt  app_module_event.c  app_module_event.h  cloud_module_event.c  cloud_module_event.h  location_module_event.c  location_module_event.h  modem_module_event.c  modem_module_event.h
src/modules/: CMakeLists.txt  cloud_module.c  led_module.c  location_module.c  modem_module.c  modules_common.h
